# TinyOCL

./: .gitmodules  CMakeLists.txt  README.md  build.py
cl/: calc.cl
examples/: CMakeLists.txt  examples.cpp
include/: TinyOCL.h
internal/: BufferManager.h  ProgramManager.h  utils.h
src/: BufferManager.cpp  CMakeLists.txt  ProgramManager.cpp  TinyOCL.cpp
test/: CMakeLists.txt  tests.cpp
