cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 20)

find_package(OpenCL REQUIRED)

set(OPENCL_HEADER_DIR ${PROJECT_SOURCE_DIR}/external/OpenCL-Headers)

set(TINYOCL_INTERNAL_HEADER_DIR ${PROJECT_SOURCE_DIR}/internal)

set(TINYOCL_INTERFACE_HEADER_DIR ${PROJECT_SOURCE_DIR}/include)

include_directories(
    ${OPENCL_HEADER_DIR}
    ${TINYOCL_INTERNAL_HEADER_DIR}
    ${TINYOCL_INTERFACE_HEADER_DIR}
)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TINYOCL_SRC_DIR)

add_library(${PROJECT_NAME} STATIC ${TINYOCL_SRC_DIR})

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${TINYOCL_INTERFACE_HEADER_DIR} ${LIBRARY_OUTPUT_PATH}/include
)
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${OPENCL_HEADER_DIR}/CL ${LIBRARY_OUTPUT_PATH}/include/CL
)